[package]
edition = "2021"
name = "bevy_dutch_road_highway_node_network"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9", features = ["dynamic"]}
bevy_egui = {version = "0.18"}
# bevy_prototype_lyon = "0.7"
bevy_polyline = "0.4.0"
bevy_shapefile = {path = "./bevy_shapefile"}
highway = {path = "./highway"}

bincode = "1.3.3"
network = {path = "./network"}

rusqlite = {version = "0.28.0", features = ["bundled"]}

serde = {version = "1.0.136", features = ["derive"]}
zstd = "0.12.1+zstd.1.5.2"

futures-lite = "1.12.0"
rayon = "1.5.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
harness = false
name = "phase_1_benchmark"

[profile.dev.package.bevy_shapefile]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3

[profile.dev.package.bevy_prototype_lyon]
opt-level = 3

[workspace]
members = ["bevy_shapefile", "network", "highway", "tools/dbf_to_sql"]
