[package]
edition = "2021"
name = "bevy_dutch_road_highway_node_network"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13", features = []}
bevy_egui = {version = "0.27"}
bevy_polyline = {git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_polyline.git", branch = "bevy-0.13"}
bevy_shapefile = {path = "./components/bevy_shapefile"}
highway = {path = "./components/highway"}

bincode = "1.3.3"
network = {path = "./components/network"}

rusqlite = {version = "0.31", features = ["bundled"]}

serde = {version = "1.0.136", features = ["derive"]}
zstd = "0.13"

futures-lite = "2.3"
rayon = "1.5.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
harness = false
name = "phase_1_benchmark"

[profile.dev.package.bevy_shapefile]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3

[workspace]
members = ["components/bevy_shapefile", "components/network", "components/highway", "tools/dbf_to_sql"]
