[package]
name = "bevy_shapefile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
bevy_prototype_lyon = "0.4.0"

rayon = "1.5.1"
shapefile = { version = "0.3.0" }
rstar = { version = "0.9.2", features = ["serde"] }
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }


[profile.dev.package.bevy]
opt-level = 3