[package]
edition = "2021"
name = "bevy_shapefile"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9", features = ["dynamic"]}

bincode = "1.3.3"
rayon = "1.5.1"
rstar = {version = "0.9.2", features = ["serde"]}
serde = {version = "1.0.136", features = ["derive"]}
shapefile = {version = "0.3.0"}