[package]
edition = "2021"
name = "highway"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
network = {path = "../network"}
rayon = "1.5.1"
serde = {version = "1.0.136", features = ["derive"]}

[profile.dev.package.rayon]
opt-level = 3
