[package]
edition = "2021"
name = "highway"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
network = {path = "../network"}
petgraph = {version = "0.6", features = ["serde-1"]}
rayon = "1.5.1"
serde = {version = "1.0.136", features = ["derive"]}
