[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }


[profile.dev.package.rayon]
opt-level = 3