[package]
edition = "2021"
name = "bevy_shapefile"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.2", features = []}

bincode = "1.3.3"
rayon = "1.5.1"
rstar = {version = "0.12", features = ["serde"]}
serde = {version = "1.0.136", features = ["derive"]}
shapefile = {version = "0.6"}

# test dependencies
[dev-dependencies]
serde_json = "1.0.68"