[package]
edition = "2021"
name = "network"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
itertools = "*"
rayon = "1.5.1"
serde = {version = "1.0.136", features = ["derive"]}

petgraph = {version = "0.6", features = ["serde-1", "rayon"]}
