[package]
edition = "2021"
name = "dbf_to_sql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusqlite = {version = "0.27.0", features = ["bundled"]}
shapefile = {version = "0.3.0"}

[profile.dev.package.bevy]
opt-level = 3
